Fixes regression where buttons were too tall
Comparing with production all buttons were suddenly larger. Fixes to ensure toolbar buttons are not suddenly taller.

Resolves https://github.com/Automattic/wp-calypso/pull/25762#issuecomment-458069473

--- a/client/my-sites/media-library/style.scss
+++ b/client/my-sites/media-library/style.scss
@@ -90,7 +90,6 @@
 .media-library__header .button,
 .media-library__header .button-group {
 	margin-right: 8px;
-	line-height: 1.5;
 }
 
 .media-library__header .button.media-library__upload-button {
